--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "project-4",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,10 +19,11 @@
   "dependencies": {
     "body-parser": "^1.14.1",
     "express": "^4.13.3",
+    "express-session": "^1.12.1",
     "hbs": "^4.0.0",
     "mongoose": "^4.2.9",
     "method-override": "^2.3.5",
-    "mongoose": "^4.2.9",
-    "morgan": "^1.6.1"
+    "morgan": "^1.6.1",
+    "request": "^2.67.0"
   }
 }
